src/test/resources/arp/invalid/arp_globalRd.sil
field f: Int

//:: ExpectedOutput(typechecker.error)
function globalRd(): Int

method foo(x: Ref)
{
}